Made a whole bunch of code formatting changes to keep the code base up to date with current standards. Also finished most of the base work on file upload

--- a/public/styles/foundation/_colors.scss
+++ b/public/styles/foundation/_colors.scss
@@ -7,6 +7,7 @@
 $indian-red: #CD5C5C;
 $pale-violet-red: #DB7093;
 $negative-red: #DB5192;
+$light-coral: #F08080;
 
 $amber: #A8B633;
 $light-yellow: #EEF3C2;
