--- a/public/styles/page/components.module.scss
+++ b/public/styles/page/components.module.scss
@@ -1,13 +1,11 @@
 /* ----------------------- IMPORTS ----------------------------- */
 
-@use 'public/styles/foundation/colors';
-@use 'public/styles/foundation/fonts';
-@use 'public/styles/foundation/responsive';
-@use 'public/styles/foundation/animations';
+@use 'sass:math';
+@use 'public/styles/foundation/common';
 
 /* ------------------ ANIMATIONS ----------------------- */
 
-@include animations.keyframes($name: bouncingBalls) {
+@include common.animations-keyframes($name: bouncingBalls) {
 	0% {
 		transform:scale(0, 0);
 	}
@@ -25,7 +23,7 @@
 	}
 }
 
-@include animations.keyframes($name: fadeIntoView) {
+@include common.animations-keyframes($name: fadeIntoView) {
 	0% {
 		opacity: 0.0;
 	}
@@ -42,8 +40,8 @@
 /* ----------------------- TOAST ----------------------------- */
 
 .custom-error-toast {
-	@include fonts.define-font($size: fonts.$secondary, $family: Poppins) {
-		color: colors.$white;
+	@include common.fonts-define-font($size: common.$fonts-secondary, $family: Poppins) {
+		color: common.$colors-white;
 	};
 
 	border: {
@@ -51,14 +49,14 @@
 	}
 
 	padding: 10px;
-	background-color: colors.$negative-red;
+	background-color: common.$colors-negative-red;
 
-	@include responsive.tablet-up() {
+	@include common.responsive-tablet-up() {
 		min-width: 250px;
 		max-width: 500px;
 	}
 
-	@include responsive.phone-only() {
+	@include common.responsive-phone-only() {
 		width: 175px;
 		max-width: 300px;
 	}
@@ -101,8 +99,8 @@
 
 /* ----------------------- LOADERS ----------------------------- */
 
-#base-loader-overlay {
-	@include animations.transition-settings($property: opacity, $duration: 0.3s);
+.base-loader-overlay {
+	@include common.animations-transition-settings($property: opacity, $duration: 0.3s);
 
 	position: fixed;
 	height: 100%;
@@ -113,7 +111,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	background-color: colors.$white;
+	background-color: common.$colors-white;
 	opacity: 0;
 	z-index: -9999;
 
@@ -130,26 +128,26 @@
 	}
 }
 
-#loading-text {
-	@include fonts.define-font($weight: 700, $size: fonts.$header, $family: Comfortaa);
-	@include animations.animation-settings($keyframeSet: fadeIntoView, $duration: 1.5s, $timing: linear, $iterations: 1, $persist: true);
+.loading-text {
+	@include common.fonts-define-font($weight: 700, $size: common.$fonts-header, $family: Comfortaa);
+	@include common.animations-animation-settings($keyframeSet: fadeIntoView, $duration: 1.5s, $timing: linear, $iterations: 1, $persist: true);
 
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
-	color: colors.$cadet-blue;
+	color: common.$colors-cadet-blue;
 }
 
 .section-loading-text {
-	@include fonts.define-font($weight: 700, $size: fonts.$section, $family: Comfortaa);
-	@include animations.animation-settings($keyframeSet: fadeIntoView, $duration: 1.5s, $timing: linear, $iterations: 1, $persist: true);
+	@include common.fonts-define-font($weight: 700, $size: common.$fonts-section, $family: Comfortaa);
+	@include common.animations-animation-settings($keyframeSet: fadeIntoView, $duration: 1.5s, $timing: linear, $iterations: 1, $persist: true);
 
 	letter-spacing: 0.2em;
 	text-transform: uppercase;
-	color: colors.$cadet-blue;
+	color: common.$colors-cadet-blue;
 }
 
 .loading-ball {
-	@include animations.animation-settings($keyframeSet: bouncingBalls, $duration: 1.5s, $timing: ease-in-out, $iterations: infinite);
+	@include common.animations-animation-settings($keyframeSet: bouncingBalls, $duration: 1.5s, $timing: ease-in-out, $iterations: infinite);
 
 	margin: {
 		left: 30px;
@@ -158,7 +156,7 @@
 
 	width: 50px;
 	height: 50px;
-	background-color: colors.$cadet-blue;
+	background-color: common.$colors-cadet-blue;
 	border-radius: 100%;
 	animation-fill-mode: both;
 
@@ -176,7 +174,7 @@
 }
 
 .uploading-indicators {
-	@include animations.transition-settings($property: opacity, $duration: 0.25s);
+	@include common.animations-transition-settings($property: opacity, $duration: 0.25s);
 
 	position: absolute;
 	top: 0;
@@ -188,14 +186,263 @@
 	z-index: -250;
 
 	& > .section-loading-text {
-		color: colors.$indian-red;
+		color: common.$colors-indian-red;
 		text-transform: none;
 		width: 100%;
 	}
 
 	& > .loading-ball {
-		background-color: colors.$indian-red;
+		background-color: common.$colors-indian-red;
 		width: 30px;
 		height: 20px;
 	}
+}
+
+/* ----------------------- GALLERY ----------------------------- */
+
+.file-carousel {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.file-thumbnail-container {
+	margin: {
+		left: 15px;
+		right: 15px;
+	}
+
+	width: 150px;
+	max-height: 150px;
+	cursor: pointer;
+	position: relative;
+}
+
+.file-delete-icon {
+	border-radius: 50%;
+	position: absolute;
+	top: -8px;
+	left: calc(100% - 8px);
+	z-index: 20;
+	cursor: pointer;
+	color: common.$colors-indian-red;
+	background-color: common.$colors-white;
+	box-shadow: 1px 1px 1px common.$colors-black;
+}
+
+.thumbnail-title-bar {
+	@include common.fonts-define-font($size: common.$fonts-secondary);
+
+	position: absolute;
+	z-index: 20;
+	top: calc(100% - 30px);
+	width: 150px;
+	height: 25px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: common.$colors-white;
+	background-color: rgba(0 0 0 / 55%);
+}
+
+.file-download-link {
+	display: none;
+}
+
+/* ----------------------- PHOTO VIEWER ----------------------------- */
+
+.gallery-overlay {
+	@include common.animations-transition-settings($property: background-color, $duration: 0.35s);
+
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	background-color: rgba(0 0 0 / 80%);
+	z-index: 4000;
+	display: block;
+}
+
+.gallery-container {
+	@include common.animations-transition-settings($property: all, $duration: 0.35);
+	@include common.fonts-define-font($size: common.$fonts-subheader);
+
+	color: common.$colors-white;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0 0 0 / 0%);
+	position: absolute;
+	opacity: 1.0;
+	z-index: 4001;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.gallery-exit-row {
+	color: common.$colors-white;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	width: 90%;
+	height: 15%;
+}
+
+.gallery-controls {
+	color: common.$colors-white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 90%;
+	height: 15%;
+}
+
+.gallery-picture-viewer {
+	@include common.animations-transition-settings($property: all, $duration: 0.35s);
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 75%;
+	opacity: 1.0;
+}
+
+.gallery-picture {
+	max-width: 100%;
+	max-height: 100%;
+	cursor: pointer;
+}
+
+.gallery-exit-button {
+	cursor: pointer;
+
+	@include common.responsive-desktop-only() {
+		margin-right: 50px;
+	}
+
+	@include common.responsive-tablet-only() {
+		margin-right: 25px;
+	}
+
+	@include common.responsive-phone-only() {
+		margin-right: 15px;
+	}
+}
+
+.gallery-left-button {
+	@include common.animations-transition-settings($property: opacity, $duration: 0.35s);
+
+	margin: {
+		right: 50px;
+	}
+
+	cursor: pointer;
+	opacity: 1.0;
+
+	&.gallery-left-button-disabled {
+		cursor: default;
+		opacity: 0.3;
+	}
+}
+
+.gallery-right-button {
+	@include common.animations-transition-settings($property: opacity, $duration: 0.35s);
+
+	margin: {
+		left: 50px;
+	}
+
+	cursor: pointer;
+	opacity: 1.0;
+
+	&.gallery-right-button-disabled {
+		cursor: default;
+		opacity: 0.3;
+	}
+}
+
+/* ----------------------- MULTITEXT ----------------------------- */
+
+.multitext-container {
+	border: {
+		style: inset;
+		width: 1px;
+		radius: 1px;
+		color: common.$colors-black;
+	}
+
+	padding: 8px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	box-shadow: 2px 2px 4px -1px common.$colors-gray;
+
+	@include common.responsive-phone-only() {
+		flex-direction: column;
+	}
+}
+
+.multitext-existing-values {
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-wrap: wrap;
+}
+
+.multitext-set-value {
+	margin: {
+		top: 5px;
+		bottom: 5px;
+		left: 3px;
+		right: 3px;
+	}
+
+	border: {
+		radius: 6px;
+	}
+
+	padding: 5px;
+	text-align: center;
+	background-color: common.$colors-slate-gray;
+	color: common.$colors-white;
+	display: flex;
+	align-items: center;
+}
+
+.multitext-new-value {
+	@include common.fonts-define-font($size: common.$fonts-secondary, $family: Poppins);
+
+	border: none;
+	box-shadow: none;
+	resize: none;
+	width: 100%;
+	height: 2em;
+
+	@include common.responsive-tablet-up() {
+		min-width: 400px;
+	}
+
+	@include common.responsive-phone-only() {
+		min-width: 225px;
+	}
+
+	&:focus {
+		outline: none;
+	}
+}
+
+.multitext-remove-mark {
+	margin: {
+		left: 4px;
+		right: 4px;
+	}
+
+	cursor: pointer;
 }
