--- a/public/styles/page/file_upload.module.scss
+++ b/public/styles/page/file_upload.module.scss
@@ -1,7 +1,6 @@
 /* ----------------------- IMPORTS ----------------------------- */
 
-@use 'public/styles/foundation/fonts';
-@use 'public/styles/foundation/colors';
+@use 'public/styles/foundation/common';
 @use 'public/styles/page/lib/form';
 
 /* ----------------------- STYLES ----------------------------- */
@@ -13,10 +12,20 @@
 		left: auto;
 		right: auto;
 	}
+
+	width: 80%;
+	text-align: center;
 }
 
 .upload-file-button {
-	@include form.small-button($width: 450px);
+	@include form.small-button($width: 250px, $bgColor: common.$colors-slate-gray);
+
+	margin: {
+		left: 5px;
+		right: 5px;
+	}
+
+	font-size: common.$fonts-secondary;
 }
 
 .upload-file-input {
@@ -31,4 +40,37 @@
 	align-items: flex-start;
 	justify-content: center;
 	flex-direction: column;
+	width: 100%;
+}
+
+.files-container {
+	margin: {
+		top: 8px;
+		bottom: 8px;
+	}
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100%;
+}
+
+.files-container-header {
+	@include common.fonts-define-font($size: common.$fonts-subsection);
+
+	letter-spacing: 0.3px;
+}
+
+.see-files-link {
+	@include common.fonts-define-font($size: common.$fonts-secondary);
+
+	margin: {
+		top: 5px;
+		bottom: 5px;
+	}
+
+	color: common.$colors-steel-blue;
+	text-decoration: underline;
+	cursor: pointer;
 }
