Finally finished the look of the payment section

--- a/public/styles/foundation/_colors.scss
+++ b/public/styles/foundation/_colors.scss
@@ -13,6 +13,7 @@ $amber: #A8B633;
 $light-yellow: #EEF3C2;
 
 $success: #21693A;
+$sea-green: #3CB371;
 
 $lavender: #E6E6FA;
 $cadet-blue: #5F9EA0;
