Finished work on the header and footer

--- a/public/styles/foundation/global.scss
+++ b/public/styles/foundation/global.scss
@@ -1,6 +1,12 @@
 /* ----------------------- GENERAL STYLES ----------------------------- */
 
 body {
+	margin: {
+		top: 0;
+		bottom: 100px;
+		left: 0;
+		right: 0;
+	}
+
 	background-color: #EEEFF1;
-	margin-bottom: 100px;
 }
