--- a/public/styles/foundation/_responsive.scss
+++ b/public/styles/foundation/_responsive.scss
@@ -1,9 +1,9 @@
 /* ----------------------- LOCAL CONSTANTS ----------------------------- */
 
-$smart-phone-only: 729px;
-$tablet-min: 730px;
-$tablet-max: 1023px;
-$desktop-only: 1024px;
+$smart-phone-only: 768px;
+$tablet-min: 769px;
+$tablet-max: 1200px;
+$desktop-only: 1201px;
 
 /* ----------------------- MIX-INS ----------------------------- */
 
@@ -84,7 +84,7 @@ $desktop-only: 1024px;
  *
  * @author kinsho
  */
-@mixin portrait-mbile-only() {
+@mixin portrait-mobile-only() {
 	@media only screen and (max-device-width: $tablet-max) and (orientation: portrait) {
 		@content;
 	}
